--- a/tb/test_uart_tx/Makefile
+++ b/tb/test_uart_tx/Makefile
@@ -11,7 +11,7 @@ PWD=$(shell pwd)
 DUT      			   = sv_uart_tx
 TOPLEVEL 			   = $(DUT)
 MODULE   			   = test_$(DUT)
-VERILOG_SOURCES += $(PWD)/../../sv-uart/$(DUT).sv
+VERILOG_SOURCES += $(PWD)/../../rtl/$(DUT).sv
 
 # module's parameters
 export PARAM_DATA_WIDTH ?= 8
