--- a/tb/test_uart_engine/Makefile
+++ b/tb/test_uart_engine/Makefile
@@ -1,12 +1,15 @@
 TOPLEVEL_LANG ?= verilog
-SIM ?= modelsim
+SIM ?= icarus
 WAVES ?= 0
 GUI ?= 0
+
 
 COCOTB_HDL_TIMEUNIT = 1ns
 COCOTB_HDL_TIMEPRECISION = 1ps
 
+
 PWD=$(shell pwd)
+
 
 DUT              = sv_uart_engine
 TOPLEVEL         = $(DUT)
@@ -15,14 +18,40 @@ VERILOG_SOURCES += $(PWD)/../../rtl/$(DUT).sv
 VERILOG_SOURCES += $(PWD)/../../rtl/sv_uart_rx.sv
 VERILOG_SOURCES += $(PWD)/../../rtl/sv_uart_tx.sv
 
+
 # module's parameters
 export PARAM_DATA_WIDTH ?= 24
 
-COMPILE_ARGS += +initmem+0
 
-SIM_ARGS += -g DATA_WIDTH=$(PARAM_DATA_WIDTH)
+ifeq ($(SIM), icarus)
+	PLUSARGS += -fst
+
+	COMPILE_ARGS += -g2012
+
+	COMPILE_ARGS += -P $(TOPLEVEL).DATA_WIDTH=$(PARAM_DATA_WIDTH)
+
+	ifeq ($(WAVES), 1)
+		VERILOG_SOURCES += iverilog_dump.v
+		COMPILE_ARGS += -s iverilog_dump
+	endif
+else ifneq ($(filter $(SIM),modelsim questa),)
+	COMPILE_ARGS += +initmem+0
+
+	SIM_ARGS += -G DATA_WIDTH=$(PARAM_DATA_WIDTH)
+endif
+
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
+
+
+iverilog_dump.v:
+	echo 'module iverilog_dump();' > $@
+	echo 'initial begin' >> $@
+	echo '    $$dumpfile("$(TOPLEVEL).fst");' >> $@
+	echo '    $$dumpvars(0, $(TOPLEVEL));' >> $@
+	echo 'end' >> $@
+	echo 'endmodule' >> $@
+
 
 clean::
 	-rm -rf callgraph.svg
@@ -32,4 +61,6 @@ clean::
 	-rm -rf results.xml
 	-rm -rf *.vstf
 	-rm -rf *.wlf
+	-rm -rf *.fst*
 	-rm -rf transcript
+	-rm -rf iverilog_dump.v
