--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ simulate:
         - cd ./../
 
         # Install cocotb stuff
-        - apt -y install python3:i386 python3-pip
+        - apt -y install python3 python3-pip
         - pip3 install cocotb cocotbext-axi cocotbext-uart cocotb-test
 
         # Run simulation
